--- a/web/component/member/member_signin.html
+++ b/web/component/member/member_signin.html
@@ -8,30 +8,30 @@
     <link rel="import" href="member_update.html">
   </head>
   <body>
-    <element name="member-sign-in" extends="span">
+    <element name="member-signin" extends="span">
       <template>
-        <div template instantiate="if showSignIn">
-          <label for="sign-in-code">Code</label>
-          <input id="sign-in-code" type="text"/>
-          <label for="sign-in-password">Password</label>
-          <input id="sign-in-password" type="password"/>
+        <div template if="showSignin">
+          <label for="signin-code">Code</label>
+          <input id="signin-code" type="text"/>
+          <label for="signin-password">Password</label>
+          <input id="signin-password" type="password"/>
           <br/>
-          <button on-click="signIn()">Sign In</button>
-          <button on-click="signUp()">Sign Up</button>
-          <label id="sign-in-message"></label>
-          <div template instantiate="if showSignUp">
+          <button on-click="signin()">Signin</button>
+          <button on-click="signup()">Signup</button>
+          <label id="signin-message"></label>
+          <div template if="showSignup">
             <member-add members="{{ members }}">
               after add sign in
             </member-add>
           </div>
         </div>
-        <div template instantiate="if showSignOut">
-          <button on-click="member()">{{ signedInMember.code }}</button>
-          <button on-click="signOut()">Sign Out</button>
+        <div template if="showSignout">
+          <button on-click="member()">{{ signedinMember.code }}</button>
+          <button on-click="signout()">Signout</button>
         </div>
-        <div template instantiate="if showMember">
+        <div template if="showMember">
           <member-update
-            member="{{ signedInMember }}" members="{{ members }}">
+            member="{{ signedinMember }}" members="{{ members }}">
           </member-update>
         </div>
         <style>
@@ -48,13 +48,13 @@
           div {
             padding: 5px;
           }
-          #sign-in-message {
+          #signin-message {
             font-size: 14px;
             background: lightyellow;
           }
         </style>
       </template>
-      <script type="application/dart" src="member_sign_in.dart"></script>
+      <script type="application/dart" src="member_signin.dart"></script>
     </element>
   </body>
 </html>
