--- a/web/component/member/member_signin_list.html
+++ b/web/component/member/member_signin_list.html
@@ -4,26 +4,26 @@
   <head>
     <meta charset="utf-8">
     <title>Member Sign In List</title>
-    <link rel="import" href="member_sign_in.html">
+    <link rel="import" href="member_signin.html">
     <link rel="import" href="member_update_by_admin.html">
     <link rel="import" href="member_list.html">
   </head>
   <body>
-    <element name="member-sign-in-list" extends="span">
+    <element name="member-signin-list" extends="span">
       <template>
-        <member-sign-in
-          id="member-sign-in" members="{{ members }}">
-        </member-sign-in>
-        <div template instantiate="if adminSignedIn">
+        <member-signin
+          id="member-signin" members="{{ members }}">
+        </member-signin>
+        <div template if="adminSignedin">
           <member-update-by-admin
             members="{{ members }}">
           </member-update-by-admin>
         </div>
-        <div template instantiate="if memberSignedIn">
+        <div template if="memberSignedin">
           <member-list members="{{ members }}"></member-list>
         </div>
       </template>
-      <script type="application/dart" src="member_sign_in_list.dart"></script>
+      <script type="application/dart" src="member_signin_list.dart"></script>
     </element>
   </body>
 </html>
